<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:text="@string/name1_text"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/crese_logo_description" />

    <EditText
        android:id="@+id/et_id_login_activity"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/EditTextBackground"
        android:drawableStart="@drawable/custom_icon_rec_user"
        android:ems="10"
        android:hint="@string/login_id_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHint="?hintColor"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password_login_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_password_login_activity"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/EditTextBackground"
        android:drawableStart="@drawable/custom_icon_rec_pass"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="?hintColor"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cl_login_options_login_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_id_login_activity"
        tools:ignore="Autofill" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_options_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login_activity">

        <CheckBox
            android:id="@+id/cb_prevail_session_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/keep_session_active_text"
            app:buttonTint="?tintColor"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login_login_activity"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="?customButton"
            android:text="@string/login_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_prevail_session_login_activity" />

        <TextView
            android:id="@+id/tv_forgot_password_login_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/forgot_your_password_text"
            android:textColor="?linkColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_register_login_activity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login_activity" />

        <TextView
            android:id="@+id/tv_register_login_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_text"
            android:textColor="?linkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_forgot_password_login_activity"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login_activity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="110dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="109dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_login_activity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>