<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.RegisterActivity">

    <TextView
            android:text="@string/register_text"
            android:layout_width="91dp"
            android:layout_height="43dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_register_text_register_activity" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:gravity="center"/>
    <EditText
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/et_username_register_activity"
            app:layout_constraintHorizontal_bias="0.503"
            android:drawableStart="@drawable/custom_icon_rec_user"
            android:drawableLeft="@drawable/custom_icon_rec_user"
            android:background="@drawable/custom_edit_text" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_text_register_activity"/>
    <EditText
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:ems="10"
            android:id="@+id/et_email_register_activity"
            android:drawableStart="@drawable/custom_icon_rec_email"
            android:drawableLeft="@drawable/custom_icon_rec_email"
            android:background="@drawable/custom_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_username_register_activity" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:ems="10"
            android:id="@+id/et_password_register_activity"
            android:drawableStart="@drawable/custom_icon_rec_pass"
            android:drawableLeft="@drawable/custom_icon_rec_pass"
            app:drawable_hide="@drawable/custom_toggle_invisible"
            app:drawable_show="@drawable/custom_toggle_visible"
            android:background="@drawable/custom_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email_register_activity" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_hint"
            android:ems="10"
            app:drawable_hide="@drawable/custom_toggle_invisible"
            app:drawable_show="@drawable/custom_toggle_visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/et_password_repeat_register_activity"
            android:drawableStart="@drawable/custom_icon_rec_pass"
            android:drawableLeft="@drawable/custom_icon_rec_pass"
            android:background="@drawable/custom_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password_register_activity"/>
    <Button
            android:text="@string/register_text"
            android:layout_width="111dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_register_register_activity" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password_repeat_register_activity"
            app:layout_constraintHorizontal_bias="0.496" android:background="@drawable/custom_button"
            android:textColor="@android:color/white" android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/have_an_account_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_register_activity" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password_repeat_register_activity"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="@+id/btn_register_register_activity"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>